# EVL-MRCC

./: README.md
2D-2D/: CMakeLists.txt
2D-2D/src/: main.cpp
MSG/: README.md  arkit_dataset.py  environment.yml  estimate-embedding.py  eval.py  evaluator.py  inference.py  local.py  localization.py  mapper.py  msg_evaluator.py  msg_localizer.py  msg_localizer_2.0.py  msg_localizer_memery.py  msg_visual.py  requirements.txt  train.py
MSG/data_preprocess/: preprocess_utils.py
MSG/models/: associate.py  encoders.py  groundingdino_helper.py  loss.py  matcher.py  msg.py
MSG/nodeVisualizer/: .gitignore  Readme.md  data_process.py  index.html
MSG/util/: box_utils.py  checkpointing.py  config_utils.py  monitor.py  transforms.py
RANSAC/: main.py  main1.py  orb-ransac.py  orb.py  sft-ransac.py  sift.py  tmp.py
data_process/: rename_copy.py
data_process/ScanNet/: SensorData.py  download_scannet.py  download_scannetv2.py  g_json.py  read.py
icp/: 2Dto2D.cpp  PnP.py  T.py  icp1.py
msg/: convert_2d.py  gt_generation.py
pose_estimate/: D-main.py  EMSE.py  README.md  T.py  main.py  pose_estimate.py  requirements.txt  run_7scenes_evaluation.sh  run_all_7scenes.py  semantic_pose copy.py  semantic_pose.py  semantic_pose_7scences.py  semantic_pose_7scences_all.py  semantic_pose_batch.py  semantic_pose_memery.py  tmp.py  visual_pose.py  语义位姿估计剑桥数据集高误差版本.py
pose_estimation/: 41069021_305.377.pincam  EMSE.py  PnP.py  T.py  depth_PnP.py  gicp copy.py  gicp.py  gtpose.py  icp.py  icp1.py
visualize/: cross_time.py  results.py  robust.py  robust1.py  tmp.py
(+32 files in other folders)
